updated css to improve contrast for selected buttons, changed alignment to use radio group, updated documentation and added 2 regression tests

--- a/examples/toolbar/css/toolbar.css
+++ b/examples/toolbar/css/toolbar.css
@@ -25,7 +25,7 @@
 }
 
 [role="toolbar"] button,
-[role="toolbar"] [role="menuitemradio"],
+[role="toolbar"] [role="radio"],
 [role="toolbar"] label,
 [role="toolbar"] .spinbutton,
 [role="toolbar"] a,
@@ -44,8 +44,8 @@
 }
 
 [role="toolbar"]  button[aria-pressed="true"],
-[role="toolbar"] [role="menuitemradio"][aria-checked="true"]  {
-	border-color:#AAA;
+[role="toolbar"] [role="radio"][aria-checked="true"]  {
+	border-color:#555;
 	font-weight: bold;
 	background-color: #F4F4F4;
 }
@@ -61,7 +61,7 @@
 }
 
 [role="toolbar"] button:focus,
-[role="toolbar"] [role="menuitemradio"]:focus,
+[role="toolbar"] [role="radio"]:focus,
 [role="toolbar"] .spinbutton:focus,
 [role="toolbar"] .focus,
 [role="toolbar"] a:focus{
@@ -72,7 +72,7 @@
 }
 
 [role="toolbar"] button:hover,
-[role="toolbar"] [role="menuitemradio"]:hover,
+[role="toolbar"] [role="radio"]:hover,
 [role="toolbar"] .spinbutton:hover,
 [role="toolbar"] label.input:hover,
 [role="toolbar"] a:hover{
