run stylelint --fix

--- a/examples/menu-button/css/menuButtonAction.css
+++ b/examples/menu-button/css/menuButtonAction.css
@@ -12,18 +12,17 @@ ul[role="menu"] {
   padding: 0;
   position: absolute;
   font-size: 110%;
-
   list-style: none;
-  background-color: #EEEEEE;
+  background-color: #eee;
   display: none;
 }
 
-ul[role="menu"] li[role="menuitem"]{
+ul[role="menu"] li[role="menuitem"] {
   display: block;
   padding: 0.25em;
   padding-left: 0.5em;
   padding-right: 0.5em;
-  background-color: #EEEEEE;
+  background-color: #eee;
   width: 4em;
 }
 
@@ -38,12 +37,12 @@ input:hover {
 
 input:focus,
 input:hover {
-  background-color: #EEEEEE;
+  background-color: #eee;
 }
 
 ul[role="menu"] li[role="menuitem"]:focus,
 ul[role="menu"] li[role="menuitem"].focus,
-ul[role="menu"] li[role="menuitem"]:hover{
+ul[role="menu"] li[role="menuitem"]:hover {
   background-color: black;
   color: white;
 }
