--- a/examples/treeview/treeview-1/css/tree.css
+++ b/examples/treeview/treeview-1/css/tree.css
@@ -5,8 +5,8 @@ ul[role="tree"] {
   font-size: 120%;
 }
 
-[role="treeitem"].doc:before {
-    content: url(../images/file.png);
+[role="treeitem"].doc::before {
+  content: url(../images/file.png);
 }
 
 [role="treeitem"][aria-expanded="false"] > ul {
@@ -17,11 +17,11 @@ ul[role="tree"] {
   display: block;
 }
 
-[role="treeitem"][aria-expanded="false"] > span:before {
+[role="treeitem"][aria-expanded="false"] > span::before {
   content: url(../images/closed.png);
 }
 
-[role="treeitem"][aria-expanded="true"] > span:before {
+[role="treeitem"][aria-expanded="true"] > span::before {
   content: url(../images/open.png);
 }
 
@@ -45,11 +45,11 @@ ul[role="tree"] {
 [role="treeitem"].focus,
 [role="treeitem"] span.focus {
   border-color: black;
-  background-color: #EEEEEE;
+  background-color: #eee;
 }
 
 [role="treeitem"].hover,
 [role="treeitem"] span:hover {
-  background-color: #DDDDDD;
+  background-color: #ddd;
 }
 
