--- a/examples/toolbar/css/menuButton.css
+++ b/examples/toolbar/css/menuButton.css
@@ -5,19 +5,17 @@
 [role='toolbar'] .menu-popup [role="menu"] {
   padding: 0;
   width: 9.5em;
-  border: 2px solid #DDD;
-  border-radius:5px;
+  border: 2px solid #ddd;
+  border-radius: 5px;
   background-color: white;
-
   display: none;
   position: absolute;
   margin: 0;
-  padding: 0;
   z-index: 1;
 }
 
 [role='toolbar'] .menu-popup [role="menu"].focus {
-  border-color: #005A9C;
+  border-color: #005a9c;
 }
 
 [role='toolbar'] .menu-popup [role="menu"] li {
@@ -34,29 +32,28 @@
   padding-bottom: 1px;
   padding-left: 2px;
   padding-right: 2px;
-  outline:0;
+  outline: 0;
   border: none;
   border-radius: 0;
 }
 
-[role='toolbar'] .menu-popup [role="menu"] [role="menuitemradio"]:before {
+[role='toolbar'] .menu-popup [role="menu"] [role="menuitemradio"]::before {
   content: url('../images/menuitemradio-unchecked.svg');
 }
 
-[role='toolbar'] .menu-popup [role="menu"] [role="menuitemradio"][aria-checked="true"]:before {
+[role='toolbar'] .menu-popup [role="menu"] [role="menuitemradio"][aria-checked="true"]::before {
   content: url('../images/menuitemradio-checked.svg');
 }
 
 [role='toolbar'] .menu-popup [role="menu"] [role="menuitemradio"]:focus,
 [role='toolbar'] .menu-popup [role="menu"] [role="menuitemradio"]:hover {
-	background:rgb(226, 239, 255);
-  border-top: 1px solid #005A9C;
-  border-bottom: 1px solid #005A9C;
-  padding-top: 0px;
-  padding-bottom: 0px;
+  background: rgb(226, 239, 255);
+  border-top: 1px solid #005a9c;
+  border-bottom: 1px solid #005a9c;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 [role='toolbar'] .menu-popup [role="menu"] [role="menuitemradio"]:focus {
-  border-color: #005A9C;
+  border-color: #005a9c;
 }
-
