--- a/examples/treeview/treeview-2/css/treeLinks.css
+++ b/examples/treeview/treeview-2/css/treeLinks.css
@@ -29,13 +29,13 @@ ul[role="tree"] a {
   display: block;
 }
 
-[role="treeitem"][aria-expanded="false"] > span:before {
+[role="treeitem"][aria-expanded="false"] > span::before {
   content: url(../images/right-arrow-brown.png);
   position: relative;
   left: -0.25em;
 }
 
-[role="treeitem"][aria-expanded="true"] > span:before {
+[role="treeitem"][aria-expanded="true"] > span::before {
   content: url(../images/down-arrow-brown.png);
   position: relative;
   left: -0.25em;
@@ -60,11 +60,11 @@ ul[role="tree"] a {
 [role="treeitem"].focus,
 [role="treeitem"] span.focus {
   border-color: black;
-  background-color: #EEEEEE;
+  background-color: #eee;
 }
 
 [role="treeitem"].hover,
 [role="treeitem"] span.hover {
-  background-color: #DDDDDD;
+  background-color: #ddd;
 }
 
