--- a/examples/menubar/menubar-2/css/menubarAction.css
+++ b/examples/menubar/menubar-2/css/menubarAction.css
@@ -5,7 +5,7 @@ ul[role="menubar"] {
   padding: 0.25em;
   font-size: 110%;
   list-style: none;
-  background-color: #EEEEEE;
+  background-color: #eee;
 }
 
 ul[role="menubar"] li {
@@ -19,7 +19,7 @@ ul[role="menubar"] > li {
   position: relative;
 }
 
-ul[role="menubar"] > li > [role="menuitem"]:after {
+ul[role="menubar"] > li > [role="menuitem"]::after {
   content: url('../images/down-arrow-brown.png');
   padding-left: 0.25em;
 }
@@ -38,7 +38,7 @@ ul[role="menubar"] ul[role="group"] {
 }
 
 ul[role="menubar"] li[aria-disabled="true"] {
-  color: #666666;
+  color: #666;
   text-decoration: line-through;
 }
 
@@ -47,8 +47,8 @@ ul[role="menubar"] [role="menuitemcheckbox"],
 ul[role="menubar"] [role="menuitemradio"],
 ul[role="menubar"] [role="separator"] {
   padding: 0.25em;
-  background-color: #EEEEEE;
-  border: 2px solid #EEEEEE;
+  background-color: #eee;
+  border: 2px solid #eee;
   color: black;
 }
 
@@ -69,7 +69,7 @@ ul[role="menubar"] [role="separator"] {
 }
 
 ul[role="menubar"]:not(.focus) [role="menuitem"]:hover {
-  background-color: #444444;
+  background-color: #444;
   color: white;
 }
 
@@ -95,8 +95,8 @@ ul[role="menubar"] [role="menuitemradio"][aria-checked='true'] {
   padding-right: 1.25em;
 }
 
-ul[role="menubar"] [role="menuitemcheckbox"][aria-checked='true']:before,
-ul[role="menubar"] [role="menuitemradio"][aria-checked='true']:before {
+ul[role="menubar"] [role="menuitemcheckbox"][aria-checked='true']::before,
+ul[role="menubar"] [role="menuitemradio"][aria-checked='true']::before {
   content: url('../images/check-brown.png');
   padding-right: 0.3em;
 }
@@ -108,14 +108,17 @@ ul[role="menubar"] [role="menuitemradio"][aria-checked='true']:before {
 .italic {
   font-style: italic;
 }
+
 .bold {
   font-weight: bold;
 }
+
 .underline {
   text-decoration: underline;
 }
+
 #textarea1 {
-  padding: .5em;
+  padding: 0.5em;
   border: 1px solid black;
   height: 400px;
   width: 70%;
