--- a/examples/carousel/carousel-1/css/carousel.css
+++ b/examples/carousel/carousel-1/css/carousel.css
@@ -1,7 +1,6 @@
-<<<<<<< HEAD
+
 /*.carousel*/
-=======
-.carousel-item { /*.carousel*/
+.carousel-item {
   display: none;
   max-height: 400px;
   max-width: 900px;
