updated date picker example to support keyboard announcements

--- a/examples/datepicker/css/datepicker.css
+++ b/examples/datepicker/css/datepicker.css
@@ -173,3 +173,9 @@ table.dates td {
   border: none;
   cursor: not-allowed;
 }
+
+.datepicker .message {
+  position: absolute;
+  top: 1em;
+  left: 1em;
+}
